All Laptop Responsive

--- a/index.html
+++ b/index.html
@@ -116,9 +116,8 @@
                </div>
                <div id="heading">My Playlist</div>
                <div class="playlist">
-                    <hr id="line">
                     <div class="col1">
-                         <div class="box1"># TITLE</div>
+                         <div class="box1 title"># TITLE</div>
                          <div class="box1">
                               <div class="number">1</div>
                               <div class="song-img">
@@ -201,7 +200,7 @@
                          </div>
                     </div>
                     <div class="col2">
-                         <div class="box2">PLAYS</div>
+                         <div class="box2 title">PLAYS</div>
                          <div class="box2">6,700,800</div>
                          <div class="box2">6,700,800</div>
                          <div class="box2">6,700,800</div>
@@ -212,7 +211,7 @@
                          <div class="box2">700,800</div>
                     </div>
                     <div class="col3">
-                         <div class="box3">
+                         <div class="box3 title">
                               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                    fill="none" stroke="white" sttroke-width="2" stroke-linecap="round"
                                    stroke-linejoin="round" class="feather feather-clock">
@@ -230,7 +229,11 @@
                          <div id ="s7" class="duration box3">04:30</div>
                     </div>
                     <div class="col4">
-                         <div class="box4">PLAY/PAUSE</div>
+                         <div class="box4 title">
+                              <div>PLAY/</div>
+                              <div>PAUSE</div>
+                              
+                         </div>
                          <div class="box4">
                               <i  id ="0" class="songItem-play fas fa-play"></i>
                          </div>
