--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
           </div>
           <div class="progress-bar">
                <div class="icons">
-                    <i class="fas fa-redo ico" id="repeat"></i>                    
+                    <i class="fas fa-1x fa-redo ico" id="repeat"></i>                    
                     <img src="./logo/previous.png" id="previous" class="ico" alt="">
                     <i class="far fa-2x fa-play-circle" id ="master-play"></i>
                     <img src="./logo/next.png" id="next" class="ico" alt="">
-                    <i class="fas fa-random ico" id="shuffle"></i>
+                    <i class="fas fa-1x fa-random ico" id="shuffle"></i>
                </div>
                <div class="song-bar">
-                    <div id="actual" class="play-time">05:31</div>
+                    <div id="actual" class="play-time">00:00</div>
                     <input type="range" name="range" id="myBar" value='0' min="0" max="100">
                     <div id="total" class="play-time">05:31</div>
                     <div id="selector">
@@ -105,8 +105,12 @@
           <div class="section3">
                <img src="./logo/queue.png" alt="">
                <img src="./logo/lyrics.png" alt="">
-               <i class="fas fa-volume-up" id="volume-btn"></i>
-               <input type="range" name="range" id="myVolume" value= ".80" step= "0.05" min="0" max="1" >
+               <div class="volume">
+                    <i class="fas fa-volume-up" id="volume-btn"></i>
+                    <div class="volume-container">
+                         <input type="range" name="range" id="myVolume" value= ".80" step= "0.05" min="0" max="1" >
+                    </div>
+               </div>
           </div>
      </div>
      <div class="container">
