Added Mobile responsive feature

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <body>
      <nav>
           <div id="more-op">
-               <img src="./logo/option.png" alt="">
+               <i id ="op-btn" class="fas fa-2x fa-bars"></i>
           </div>
           <div id="main-logo">
                <img src="./logo/spotify-logo.png" alt="logo.png" srcset="">
                <div id="logo-name">Spotify&#8482;</div>
           </div>
           <div id="main-menu">
-               <ul>
+               <ul id ="dropdown-list">
                     <li class="active"><a href="/">
                               <div class="menu-op">
                                    <img src="./logo/home.png" class="menu-logo" alt="">
