Changed volume hover effect to click

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                <img src="./logo/lyrics.png" alt="">
                <div class="volume">
                     <i class="fas fa-volume-up" id="volume-btn"></i>
-                    <div class="volume-container">
+                    <div class="volume-container" id="vol-slider">
                          <input type="range" name="range" id="myVolume" value= ".80" step= "0.05" min="0" max="1" >
                     </div>
                </div>
